--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </section>
 
         <!-- price section -->
-        <section class="price" id="price">
+        <section class="price hidden" id="price">
             <div class="container">
                 <div class="price-box">
                     <div class="section-desc">My price plan</div>
@@ -458,8 +458,112 @@
 
             </div>
         </section>
+
+        <!-- price section -->
+        <section class="blog" id="blog">
+            <div class="container">
+                <div class="blog-box">
+                    <div class="section-desc">Blog and news</div>
+                    <h3 class="section-title">Enhancing personal branding the through powerful posts</h3>
+                    <p class="section-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam pariatur
+                        laborum numquam illum iusto atque, temporibus earum maiores optio repellendus.</p>
+                </div>
+                <div class="blog-slider">
+                    <div class="swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="card-neon">
+                                    <div class="card-neon-body">
+                                        <div class="card-neon-box card-item1">
+                                            <img src="/images/blog-1.webp" alt="">
+                                            <div class="slider-content">
+                                                <div class="slider-content-wrapper">
+                                                    <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
+                                                    <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
+                                                </div>
+                                                <div class="slider-content-title">From dev to blog exporing the world of development</div>
+                                                <button class="btn">Read more</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="card-neon">
+                                    <div class="card-neon-body">
+                                        <div class="card-neon-box card-item1">
+                                            <img src="/images/blog-3.webp" alt="">
+                                            <div class="slider-content">
+                                                <div class="slider-content-wrapper">
+                                                    <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
+                                                    <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
+                                                </div>
+                                                <div class="slider-content-title">How to create awesome design using photosop</div>
+                                                <button class="btn">Read more</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="card-neon">
+                                    <div class="card-neon-body">
+                                        <div class="card-neon-box card-item1">
+                                            <img src="/images/blog-2.webp" alt="">
+                                            <div class="slider-content">
+                                                <div class="slider-content-wrapper">
+                                                    <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
+                                                    <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
+                                                </div>
+                                                <div class="slider-content-title">How to create awesome design using photosop</div>
+                                                <button class="btn">Read more</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="card-neon">
+                                    <div class="card-neon-body">
+                                        <div class="card-neon-box card-item1">
+                                            <img src="/images/blog-1.webp" alt="">
+                                            <div class="slider-content">
+                                                <div class="slider-content-wrapper">
+                                                    <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
+                                                    <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
+                                                </div>
+                                                <div class="slider-content-title">How to create awesome design using photosop</div>
+                                                <button class="btn">Read more</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="card-neon">
+                                    <div class="card-neon-body">
+                                        <div class="card-neon-box card-item1">
+                                            <img src="/images/blog-3.webp" alt="">
+                                            <div class="slider-content">
+                                                <div class="slider-content-wrapper">
+                                                    <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
+                                                    <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
+                                                </div>
+                                                <div class="slider-content-title">How to create awesome design using photosop</div>
+                                                <button class="btn">Read more</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
