--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
 
-    <div class="line-wrapper" style="display: none;">
+    <div class="line-wrapper">
         <div class="line">1</div>
         <div class="line"></div>
         <div class="line"></div>
     </div>
 
-    <header class="header hidden">
+    <header class="header">
         <div class="container">
             <div class="header-wrapper">
                 <div class="logo">Daria <span>Popova</span></div>
@@ -42,7 +42,7 @@
     <main>
 
         <!-- home section -->
-        <section class="home hidden">
+        <section class="home">
             <div class="container">
                 <div class="home-wrapper">
                     <div class="home-desc">Hello</div>
@@ -55,7 +55,7 @@
         </section>
 
         <!-- about section -->
-        <section class="about hidden" id="about">
+        <section class="about" id="about">
             <div class="container">
                 <div class="about-wrapper">
                     <div class="about-left">
@@ -122,7 +122,7 @@
         </section>
 
         <!-- service section -->
-        <section class="service hidden" id="service">
+        <section class="service" id="service">
             <div class="container">
                 <div class="service-box">
                     <div class="section-desc">Latest Service</div>
@@ -177,7 +177,7 @@
         </section>
 
         <!-- portfolio section -->
-        <section class="portfolio hidden" id="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="container">
                 <div class="portfolio-box">
                     <div class="section-desc">Latest Portfolio</div>
@@ -277,7 +277,7 @@
         </section>
 
         <!-- education section -->
-        <section class="education hidden" id="education">
+        <section class="education" id="education">
             <div class="container">
                 <div class="education-box">
                     <div class="section-desc">My education</div>
@@ -339,7 +339,7 @@
         </section>
 
         <!-- price section -->
-        <section class="price hidden" id="price">
+        <section class="price" id="price">
             <div class="container">
                 <div class="price-box">
                     <div class="section-desc">My price plan</div>
@@ -481,7 +481,8 @@
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
                                                     <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
                                                 </div>
-                                                <div class="slider-content-title">From dev to blog exporing the world of development</div>
+                                                <div class="slider-content-title">From dev to blog exporing the world of
+                                                    development</div>
                                                 <button class="btn">Read more</button>
                                             </div>
                                         </div>
@@ -498,7 +499,8 @@
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
                                                     <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
                                                 </div>
-                                                <div class="slider-content-title">How to create awesome design using photosop</div>
+                                                <div class="slider-content-title">How to create awesome design using
+                                                    photosop</div>
                                                 <button class="btn">Read more</button>
                                             </div>
                                         </div>
@@ -515,7 +517,8 @@
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
                                                     <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
                                                 </div>
-                                                <div class="slider-content-title">How to create awesome design using photosop</div>
+                                                <div class="slider-content-title">How to create awesome design using
+                                                    photosop</div>
                                                 <button class="btn">Read more</button>
                                             </div>
                                         </div>
@@ -532,7 +535,8 @@
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
                                                     <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
                                                 </div>
-                                                <div class="slider-content-title">How to create awesome design using photosop</div>
+                                                <div class="slider-content-title">How to create awesome design using
+                                                    photosop</div>
                                                 <button class="btn">Read more</button>
                                             </div>
                                         </div>
@@ -549,7 +553,8 @@
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
                                                     <div class=""><i class="ri-chat-1-line"></i> 5 comments</div>
                                                 </div>
-                                                <div class="slider-content-title">How to create awesome design using photosop</div>
+                                                <div class="slider-content-title">How to create awesome design using
+                                                    photosop</div>
                                                 <button class="btn">Read more</button>
                                             </div>
                                         </div>
@@ -561,6 +566,69 @@
                 </div>
             </div>
         </section>
+
+        <!-- get in touch -->
+        <section class="touch">
+            <div class="container">
+                <div class="swiper-slide">
+                    <div class="card-neon">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="touch-wrapper">
+                                    <div class="touch-left">
+                                        <h3 class="touch-form-title">Get ready to create great</h3>
+                                        <div class="card-info">
+                                            <div class="card-info-icon">
+                                                <i class="ri-mail-line ri-xl"></i>
+                                            </div>
+                                            <div class="card-info-content">
+                                                <span>E-mail</span>
+                                                <p>popova_darya@gmail.com</p>
+                                            </div>
+                                        </div>
+                                        <div class="card-info">
+                                            <div class="card-info-icon">
+                                                <i class="ri-map-pin-line ri-xl"></i>
+                                            </div>
+                                            <div class="card-info-content">
+                                                <span>Location</span>
+                                                <p>49064, Dnipro, st. Ulyanovskaya</p>
+                                            </div>
+                                        </div>
+                                        <div class="card-info">
+                                            <div class="card-info-icon">
+                                                <i class="ri-phone-line ri-xl"></i>
+                                            </div>
+                                            <div class="card-info-content">
+                                                <span>Contact</span>
+                                                <p>+38 (050) 362-56-89, 363-77-44</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="touch-right">
+                                        <div class="">GET IN TOUCH</div>
+                                        <div class="touch-form-input">
+                                            <input type="text" placeholder="Your name">
+                                            <input type="text" placeholder="Your number">
+                                            <input type="text" placeholder="Your e-mail">
+                                            <input type="text" placeholder="Your subject">
+                                        </div>
+                                        <textarea class="touch-form-text"></textarea>
+                                        <button class="touch-btn">Send message</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="">&copy; All rights reserved Daria Popova</div>
+            </div>
+        </footer>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
