--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 <body>
 
     <div class="line-wrapper">
-        <div class="line">1</div>
+        <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
     </div>
+
+    <a href="#" class="btn-up">
+         <i class="ri-arrow-up-s-line ri-3x"></i>
+    </a>
 
     <header class="header">
         <div class="container">
@@ -23,11 +27,11 @@
                 <div class="logo">Daria <span>Popova</span></div>
                 <ul class="menu">
                     <li><a href="#" class="link active">Home</a></li>
-                    <li><a href="#" class="link">About</a></li>
-                    <li><a href="#" class="link">Services</a></li>
-                    <li><a href="#" class="link">Portfolio</a></li>
-                    <li><a href="#" class="link">Blog</a></li>
-                    <li><a href="#" class="link">Contacts</a></li>
+                    <li><a href="#about" class="link">About</a></li>
+                    <li><a href="#service" class="link">Services</a></li>
+                    <li><a href="#portfolio" class="link">Portfolio</a></li>
+                    <li><a href="#blog" class="link">Blog</a></li>
+                    <li><a href="#touch" class="link">Contacts</a></li>
                 </ul>
                 <div class="header-social">
                     <a href="#" class="social-link"><i class="ri-facebook-fill"></i></a>
@@ -568,7 +572,7 @@
         </section>
 
         <!-- get in touch -->
-        <section class="touch">
+        <section class="touch" id="touch">
             <div class="container">
                 <div class="swiper-slide">
                     <div class="card-neon">
