--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
     </div>
 
     <a href="#" class="btn-up">
-         <i class="ri-arrow-up-s-line ri-3x"></i>
+        <i class="ri-arrow-up-s-line ri-3x"></i>
     </a>
 
     <header class="header">
         <div class="container">
             <div class="header-wrapper">
-                <div class="logo">Daria <span>Popova</span></div>
+                <a href="#" class="logo">Daria <span>Popova</span></a>
                 <ul class="menu">
-                    <li><a href="#" class="link active">Home</a></li>
+                    <li><a href="#home" class="link active-link hidden">Home</a></li>
                     <li><a href="#about" class="link">About</a></li>
                     <li><a href="#service" class="link">Services</a></li>
                     <li><a href="#portfolio" class="link">Portfolio</a></li>
+                    <li><a href="#education" class="link">Education</a></li>
+                    <li><a href="#price" class="link">Price</a></li>
                     <li><a href="#blog" class="link">Blog</a></li>
                     <li><a href="#touch" class="link">Contacts</a></li>
                 </ul>
@@ -46,14 +48,17 @@
     <main>
 
         <!-- home section -->
-        <section class="home">
+        <section class="home" id="home">
             <div class="container">
                 <div class="home-wrapper">
                     <div class="home-desc">Hello</div>
                     <h1 class="home-title">I`m Daria Popova <br>a <span id="element"> Content Writer</span></h1>
                     <p>A personal portfolio is a collection of your work, achievements, and that highlights your
                         abilities and professional growth</p>
-                    <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                    <a href="#" class="btn">
+                        <span>View portfolio</span>
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
                 </div>
             </div>
         </section>
@@ -101,7 +106,7 @@
                                             </div>
                                             <div class="about-title">Business</div>
                                         </div>
-                                        <div class="">Each one showcases my approach</div>
+                                        <p>Each one showcases my approach</з>
                                     </div>
                                 </div>
                             </div>
@@ -114,12 +119,12 @@
                                             </div>
                                             <div class="about-title">Partners</div>
                                         </div>
-                                        <div class="">Business consulting consul us to a provide</div>
+                                        <p>Business consulting consul us to a provide</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <button class="btn">Read more</button>
+                        <button class="btn"><span>Read more</span><i class="ri-arrow-right-line"></i></button>
                     </div>
                 </div>
             </div>
@@ -207,7 +212,7 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -220,7 +225,7 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -233,7 +238,7 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -246,7 +251,7 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -259,7 +264,7 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -272,7 +277,7 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -370,7 +375,7 @@
                                     <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
                                     <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
                                 </ul>
-                                <button class="btn">Get started</button>
+                                <button class="btn"><span>Get started</span><i class="ri-arrow-right-line"></i></button>
                             </div>
                         </div>
                     </div>
@@ -387,7 +392,7 @@
                                     <li><i class="ri-checkbox-circle-line"></i> Marketing platform</li>
                                     <li><i class="ri-checkbox-circle-line"></i> Life time support</li>
                                 </ul>
-                                <button class="btn">Get started</button>
+                                <button class="btn"><span>Get started</span><i class="ri-arrow-right-line"></i></button>
                             </div>
                         </div>
                     </div>
@@ -402,7 +407,7 @@
                                     <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
                                     <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
                                 </ul>
-                                <button class="btn">Get started</button>
+                                <button class="btn"><span>Get started</span><i class="ri-arrow-right-line"></i></button>
                             </div>
                         </div>
                     </div>
@@ -422,7 +427,7 @@
                                     <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
                                     <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
                                 </ul>
-                                <button class="btn">Get started</button>
+                                <button class="btn"><span>Get started</span><i class="ri-arrow-right-line"></i></button>
                             </div>
                         </div>
                     </div>
@@ -439,7 +444,7 @@
                                     <li><i class="ri-checkbox-circle-line"></i> Marketing platform</li>
                                     <li><i class="ri-checkbox-circle-line"></i> Life time support</li>
                                 </ul>
-                                <button class="btn">Get started</button>
+                                <button class="btn"><span>Get started</span><i class="ri-arrow-right-line"></i></button>
                             </div>
                         </div>
                     </div>
@@ -454,7 +459,7 @@
                                     <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
                                     <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
                                 </ul>
-                                <button class="btn">Get started</button>
+                                <button class="btn"><span>Get started</span><i class="ri-arrow-right-line"></i></button>
                             </div>
                         </div>
                     </div>
