--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                     <a href="#" class="social-link"><i class="ri-instagram-fill"></i></a>
                     <a href="#" class="social-link"><i class="ri-behance-fill"></i></a>
                 </div>
+
+                <!-- Mobile menu -->
+
+                <div class="mobile-menu">
+                    <i class="ri-menu-3-line ri-2x"></i>
+                </div>
             </div>
         </div>
     </header>
@@ -48,7 +54,7 @@
     <main>
 
         <!-- home section -->
-        <section class="home" id="home">
+        <section class="home hidden" id="home">
             <div class="container">
                 <div class="home-wrapper">
                     <div class="home-desc">Hello</div>
@@ -64,7 +70,7 @@
         </section>
 
         <!-- about section -->
-        <section class="about" id="about">
+        <section class="about hidden" id="about">
             <div class="container">
                 <div class="about-wrapper">
                     <div class="about-left">
@@ -131,7 +137,7 @@
         </section>
 
         <!-- service section -->
-        <section class="service" id="service">
+        <section class="service hidden" id="service">
             <div class="container">
                 <div class="service-box">
                     <div class="section-desc">Latest Service</div>
@@ -186,7 +192,7 @@
         </section>
 
         <!-- portfolio section -->
-        <section class="portfolio" id="portfolio">
+        <section class="portfolio hidden" id="portfolio">
             <div class="container">
                 <div class="portfolio-box">
                     <div class="section-desc">Latest Portfolio</div>
@@ -286,7 +292,7 @@
         </section>
 
         <!-- education section -->
-        <section class="education" id="education">
+        <section class="education hidden" id="education">
             <div class="container">
                 <div class="education-box">
                     <div class="section-desc">My education</div>
@@ -348,7 +354,7 @@
         </section>
 
         <!-- price section -->
-        <section class="price" id="price">
+        <section class="price hidden" id="price">
             <div class="container">
                 <div class="price-box">
                     <div class="section-desc">My price plan</div>
@@ -469,7 +475,7 @@
         </section>
 
         <!-- price section -->
-        <section class="blog" id="blog">
+        <section class="blog hidden" id="blog">
             <div class="container">
                 <div class="blog-box">
                     <div class="section-desc">Blog and news</div>
@@ -577,7 +583,7 @@
         </section>
 
         <!-- get in touch -->
-        <section class="touch" id="touch">
+        <section class="touch hidden" id="touch">
             <div class="container">
                 <div class="swiper-slide">
                     <div class="card-neon">
@@ -633,7 +639,7 @@
             </div>
         </section>
 
-        <footer class="footer">
+        <footer class="footer hidden">
             <div class="container">
                 <div class="">&copy; All rights reserved Daria Popova</div>
             </div>
