--- a/index.html
+++ b/index.html
@@ -45,8 +45,19 @@
                 <!-- Mobile menu -->
 
                 <div class="mobile-menu">
-                    <i class="ri-menu-3-line ri-2x"></i>
+                    <i class="ri-menu-3-line ri-2x mobile-icon"></i>
+                    <i class="ri-close-large-line ri-2x mobile-icon"></i>
                 </div>
+
+                <ul class="mobile-menu-nav">
+                    <li><a href="#about" class="link">About</a></li>
+                    <li><a href="#service" class="link">Services</a></li>
+                    <li><a href="#portfolio" class="link">Portfolio</a></li>
+                    <li><a href="#education" class="link">Education</a></li>
+                    <li><a href="#price" class="link">Price</a></li>
+                    <li><a href="#blog" class="link">Blog</a></li>
+                    <li><a href="#touch" class="link">Contacts</a></li>
+                </ul>
             </div>
         </div>
     </header>
@@ -54,7 +65,7 @@
     <main>
 
         <!-- home section -->
-        <section class="home hidden" id="home">
+        <section class="home" id="home">
             <div class="container">
                 <div class="home-wrapper">
                     <div class="home-desc">Hello</div>
@@ -70,7 +81,7 @@
         </section>
 
         <!-- about section -->
-        <section class="about hidden" id="about">
+        <section class="about" id="about">
             <div class="container">
                 <div class="about-wrapper">
                     <div class="about-left">
@@ -137,7 +148,7 @@
         </section>
 
         <!-- service section -->
-        <section class="service hidden" id="service">
+        <section class="service" id="service">
             <div class="container">
                 <div class="service-box">
                     <div class="section-desc">Latest Service</div>
@@ -192,7 +203,7 @@
         </section>
 
         <!-- portfolio section -->
-        <section class="portfolio hidden" id="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="container">
                 <div class="portfolio-box">
                     <div class="section-desc">Latest Portfolio</div>
@@ -277,7 +288,33 @@
                     <div class="card-neon card-tab" data-tab="javascript">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-1.webp" alt="">
+                                <img src="/images/portfolio-2.webp" alt="">
+                                <p class="portfolio-card-title">Sass Website Design</p>
+                                <ul class="portfolio-card-cat">
+                                    <li>Adobe</li>
+                                    <li>Ai</li>
+                                </ul>
+                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon card-tab" data-tab="javascript">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <img src="/images/portfolio-4.webp" alt="">
+                                <p class="portfolio-card-title">Sass Website Design</p>
+                                <ul class="portfolio-card-cat">
+                                    <li>Adobe</li>
+                                    <li>Ai</li>
+                                </ul>
+                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon card-tab" data-tab="javascript">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <img src="/images/portfolio-3.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
@@ -292,7 +329,7 @@
         </section>
 
         <!-- education section -->
-        <section class="education hidden" id="education">
+        <section class="education" id="education">
             <div class="container">
                 <div class="education-box">
                     <div class="section-desc">My education</div>
@@ -354,7 +391,7 @@
         </section>
 
         <!-- price section -->
-        <section class="price hidden" id="price">
+        <section class="price" id="price">
             <div class="container">
                 <div class="price-box">
                     <div class="section-desc">My price plan</div>
@@ -475,7 +512,7 @@
         </section>
 
         <!-- price section -->
-        <section class="blog hidden" id="blog">
+        <section class="blog" id="blog">
             <div class="container">
                 <div class="blog-box">
                     <div class="section-desc">Blog and news</div>
@@ -583,7 +620,7 @@
         </section>
 
         <!-- get in touch -->
-        <section class="touch hidden" id="touch">
+        <section class="touch" id="touch">
             <div class="container">
                 <div class="swiper-slide">
                     <div class="card-neon">
@@ -639,7 +676,7 @@
             </div>
         </section>
 
-        <footer class="footer hidden">
+        <footer class="footer">
             <div class="container">
                 <div class="">&copy; All rights reserved Daria Popova</div>
             </div>
