--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="home-wrapper">
                     <div class="home-desc">Hello</div>
                     <h1 class="home-title">I`m Daria Popova <br>a <span id="element"> Content Writer</span></h1>
-                    <p>A personal portfolio is a collection of your work, achievements, and that highlights your
+                    <p class="home-text">A personal portfolio is a collection of your work, achievements, and that highlights your
                         abilities and professional growth</p>
                     <a href="#" class="btn">
                         <span>View portfolio</span>
@@ -683,6 +683,7 @@
         </footer>
     </main>
 
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="module" src="js/main.js"></script>
